k8s/deployment-s3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neu-surface-detect-api
  namespace: neu-surface-detect
  labels:
    app: neu-surface-detect-api
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: neu-surface-detect-api
  template:
    metadata:
      labels:
        app: neu-surface-detect-api
    spec:
      containers:
        - name: api
          image: neu-surface-detect-api:v1
          imagePullPolicy: Never

          ports:
            - name: http
              containerPort: 8000

          volumeMounts:
            - name: model-data
              mountPath: /models
              readOnly: true
            - name: monitoring-data
              mountPath: /app/models/monitoring

          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2000m"
              memory: "2Gi"

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 15

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: model-data
          emptyDir: {}
        - name: monitoring-data
          emptyDir: {}
