k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neu-surface-detect-service
  namespace: neu-surface-detect
spec:
  selector:
    app: neu-surface-detect-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
