k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neu-surface-detect-ingress
  namespace: neu-surface-detect
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
spec:
  ingressClassName: nginx
  rules:
    - host: neu-surface-detect.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neu-surface-detect-service
                port:
                  number: 80
